Fix: `z-index` of the popup

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -63,6 +63,7 @@
   width: 100%;
   top: 100%;
   margin-top: 0;
+  z-index: 1;
 }
 
 .popover h2 {
